k8s/manifests/applications/configserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configserver
  template:
    metadata:
      labels:
        app: configserver
    spec:
      containers:
        - name: configserver
          image: lordsecond/configserver:latest
          ports:
            - containerPort: 8888
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 60
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 60
            periodSeconds: 20
          volumeMounts:
            - name: config-volume
              mountPath: /config/application.properties
              subPath: application.properties
      volumes:
        - name: config-volume
          configMap:
            name: configserver-config
---
apiVersion: v1
kind: Service
metadata:
  name: configserver
spec:
  selector:
    app: configserver
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: ClusterIP
