k8s/manifests/applications/exercise.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exercise
  template:
    metadata:
      labels:
        app: exercise
    spec:
      containers:
        - name: exercise
          image: lordsecond/exercise:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: exercise
spec:
  selector:
    app: exercise
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
