k8s/manifests/applications/fitplanfrontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitplanfrontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fitplanfrontend
  template:
    metadata:
      labels:
        app: fitplanfrontend
    spec:
      containers:
        - name: fitplanfrontend
          image: lordsecond/fitplanfrontend:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: fitplanfrontend-nodeport
spec:
  type: NodePort
  selector:
    app: fitplanfrontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: fitplanfrontend
spec:
  type: ClusterIP
  selector:
    app: fitplanfrontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
