k8s/manifests/applications/notification.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: lordsecond/notification:latest
          ports:
            - containerPort: 8083
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 60
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 60
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: notification
spec:
  selector:
    app: notification
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
---
#---
#apiVersion: v1
#kind: ConfigMap
#metadata:
#  name: fluentd-config
#data:
#  fluentd.conf: |
#    <source>
#      @type forward
#      port 24224
#    </source>
#
#    <match **>
#      @type elasticsearch
#      host elasticsearch.default.svc.cluster.local
#     port 9200
#     logstash_format true
#     logstash_prefix fluentd
#     flush_interval 5s
#  </match>
