k8s/manifests/applications/validation.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: validation
  template:
    metadata:
      labels:
        app: validation
    spec:
      containers:
        - name: validation
          image: lordsecond/validation:latest
          ports:
            - containerPort: 8082
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 60
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 60
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: validation
spec:
  selector:
    app: validation
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
