k8s/manifests/applications/fitplan-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fitplan-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    #kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.global-static-ip-name: "fitplan-external-ip"
    #nginx.ingress.kubernetes.io/rewrite-target: /  # Rewrite path using the captured group
    #nginx.ingress.kubernetes.io/use-regex: "true"  # Enable regex matching in paths
spec:
  ingressClassName: nginx
  tls:
  - secretName: fitplan-tls
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: fitplanfrontend
              port:
                number: 80
